# qlock

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
